# ui-chatter

./: .gitignore  CLAUDE_AGENT_SDK_USAGE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_CSP_FIX.md  MARKDOWN_RENDERING_FIX.md  SESSION-2026-01-25.md  WEBSOCKET_IMPROVEMENTS.md
docs/decisions/: ADR-0001-use-agent-sdk-over-acp.md
docs/tech-brainstorm/2026-01-08-ui-context-bridge/: api-design.md  integration-points.md  security.md  session-summary.md  system-components.md  tech-choices.md
poc/: POC-RESULTS.md  README.md
poc/extension/: .eslintrc.json  Makefile  TYPESCRIPT_MIGRATION.md  background.js  content.css  content.js  fetch-libs.sh  jest.config.cjs  manifest.json  package.json  settings.html  settings.js  sidepanel.html  sidepanel.js  tsconfig.json
poc/extension/coverage/: clover.xml  coverage-final.json  lcov.info
poc/extension/coverage/lcov-report/: background.js.html  content.js.html  index.html  settings.js.html  sidepanel.js.html
poc/extension/libs/: README.md
poc/extension/src/: PermissionModeController.ts  autocomplete.ts  background.ts  content.ts  global.d.ts  inputHistoryRepository.ts  inputhistory.ts  settings.ts  sidepanel.ts  types.ts
poc/extension/tech-specs/draft/: TS-0001-multi-line-input-system.md
poc/extension/tests/: README.md  background.test.js  inputHistoryRepository.test.ts  message-handlers.test.js  setup.js  sidepanel.test.js
poc/server/: package.json
poc/server/src/: acp-client.ts  index.ts  prompt-builder.ts  types.ts
service/: .env.example  .envrc  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  Makefile  README.md  pyproject.toml  test_sdk_backend.py
service/docs/: BACKENDS.md  BACKEND_STRATEGY_IMPLEMENTATION.md  SDK_SESSION_SELECTION.md
service/src/ui_chatter/: __init__.py  agent_manager.py  cli.py  commands_discovery.py  config.py  exceptions.py  logging_config.py  main.py  project_files.py  screenshot_store.py  session_manager.py  session_repository.py  session_store.py  stream_controller.py  types.py  websocket.py
service/src/ui_chatter/backends/: __init__.py  anthropic_sdk.py  base.py  claude_agent_sdk.py  claude_cli.py
service/src/ui_chatter/models/: __init__.py  context.py  messages.py  session.py
service/src/ui_chatter/schemas/: __init__.py
service/src/ui_chatter/utils/: url_utils.py
service/tech-specs/draft/: TS-0001-input-history-feature.md
service/tests/: __init__.py  test_auto_resume.py  test_immediate_cancel.py  test_session_switching.py  test_url_utils.py
service/tests/unit/: test_claude_agent_sdk_backend.py
tech-specs/draft/: TS-0001-acp-browser-integration-poc.md  TS-0001-sdk-message-type-display.md  TS-0002-agent-sdk-mvp-implementation.md  TS-0003-structured-llm-response-protocol.md  TS-0004-session-selection-ui.md  TS-0005-claude-agent-sdk-integration.md  TS-0006-sdk-streaming-and-ux-improvements.md  TS-0007-project-files-and-commands-api.md  TS-0008-sdk-session-management-refactoring.md  TS-0009-permission-support-ui.md  TS-0010-command-autocomplete-ui-implementation.md
